Header, adjustments and page testComponent.

--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,13 @@
       content="Website showing react components created by Alexandre Nakano Marques"
     />
     <title>PlantIndex</title>
+    <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100,200,300,400&display=swap" rel="stylesheet">   
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@100;300;400&display=swap" rel="stylesheet">  
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div class="app" id="root"></div>
   </body>
 </html>
