--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <title>PlantIndex</title>
     <meta charset="UTF-8">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100,200,300,400&display=swap" rel="stylesheet">   
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@100;300;400&display=swap" rel="stylesheet">  
   </head>
   <body>
